@@ -270,12 +270,9 @@ public class SendAndReplyService {
     public static final String DOCUMENT = "Document";
     public static final String MESSAGE_DETAILS = "Message details";
     public static final String NO_MESSAGE_FOUND_ERROR = "No message found with that ID";
-    public static final String APPLICATION_LINK = "#Other%20applications";
     public static final String HEARINGS_LINK = "/hearings";
-    public static final String OTHER_APPLICATION = "Other application";
     public static final String HEARINGS = "Hearings";
     public static final String ANCHOR_HREF_START = "<a href='";
-    public static final String OTHER_APPLICATION_ANCHOR_END = "'>Other application</a>";
     public static final String HEARINGS_ANCHOR_END = "'>Hearings</a>";
     public static final String ARROW_SEPARATOR = "->";
 
@@ -746,7 +743,7 @@ public class SendAndReplyService {
         if (caseData.getAdditionalApplicationsBundle() != null && !caseData.getAdditionalApplicationsBundle().isEmpty()) {
             List<DynamicListElement> dynamicListElements = new ArrayList<>();
             additionalApplicationElements = caseData.getAdditionalApplicationsBundle();
-            additionalApplicationElements.stream().forEach(additionalApplicationsBundleElement -> {
+            additionalApplicationElements.forEach(additionalApplicationsBundleElement -> {
                 AdditionalApplicationsBundle additionalApplicationsBundle = additionalApplicationsBundleElement.getValue();
 
                 getOtherApplicationBundleDynamicList(
@@ -1082,9 +1079,18 @@ public class SendAndReplyService {
                 .getMetadataForDocument(authorization, authTokenGenerator.generate(), UUID.fromString(documentId));
 
             if (document != null) {
-                return buildFromDocument(document);
+                uk.gov.hmcts.reform.prl.models.documents.Document prlDocument = buildFromDocument(document);
+
+                final String[] labelParts = submittedDocumentList.getValue().getLabel().split(ARROW_SEPARATOR);
+                final String documentName = labelParts[documentPath.length - 1].trim();
+
+                return prlDocument.toBuilder()
+                    .documentFileName(documentName)
+                    .build();
             }
+
         }
+
         return null;
     }
 
@@ -1131,8 +1137,7 @@ public class SendAndReplyService {
     }
 
     private static List<Element<Document>> getOtherApplicationDocuments(OtherApplicationsBundle otherApplicationsBundle) {
-        List<Element<Document>> otherApplicationDocuments = new ArrayList<>();
-        otherApplicationDocuments.addAll(otherApplicationsBundle.getFinalDocument());
+        List<Element<Document>> otherApplicationDocuments = new ArrayList<>(otherApplicationsBundle.getFinalDocument());
 
         if (otherApplicationsBundle.getSupportingEvidenceBundle() != null) {
             otherApplicationDocuments.addAll(
@@ -1149,8 +1154,7 @@ public class SendAndReplyService {
     }
 
     private static List<Element<Document>> getC2ApplicationDocuments(C2DocumentBundle c2DocumentBundle) {
-        List<Element<Document>> c2ApplicationDocuments = new ArrayList<>();
-        c2ApplicationDocuments.addAll(c2DocumentBundle.getFinalDocument());
+        List<Element<Document>> c2ApplicationDocuments = new ArrayList<>(c2DocumentBundle.getFinalDocument());
 
         if (c2DocumentBundle.getSupportingEvidenceBundle() != null) {
             c2ApplicationDocuments.addAll(
@@ -1803,7 +1807,7 @@ public class SendAndReplyService {
         return roleAssignmentResponseList.stream()
             .filter(roleAssignmentResponse -> roleAssignmentResponse.getRoleName().equals(
                 ALLOCATE_JUDGE_ROLE) && roleAssignmentResponse.getAttributes().getCaseId().equals(
-                String.valueOf(caseId))).toList().get(0).getId();
+                String.valueOf(caseId))).toList().getFirst().getId();
     }
 
     private Optional<AllocatedJudgeForSendAndReply> retreiveExistingJudgeAllocationFromSendAndReply(
